jeebox - better examples